--- a/Pandas/data_2/pandas_demo.ipynb
+++ b/Pandas/data_2/pandas_demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d5fa44a2",
+   "id": "fa044e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "adbf000b",
+   "id": "c5fe2263",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a353e8f4",
+   "id": "5441f317",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "57afa094",
+   "id": "bf4b742e",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "14128d3f",
+   "id": "8abc6e89",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2353665a",
+   "id": "c2023b04",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "054aaa74",
+   "id": "28a7dc30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3b2a8fa9",
+   "id": "37892707",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e915ed05",
+   "id": "fdffa6f6",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "02a2b5f5",
+   "id": "fdaa9e4d",
    "metadata": {},
    "outputs": [
     {
@@ -644,8 +644,209 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "52045fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Australia         38.0\n",
+       "Brazil            39.0\n",
+       "Canada            39.0\n",
+       "France            39.0\n",
+       "Germany           39.0\n",
+       "Italy             39.0\n",
+       "Mexico            39.0\n",
+       "Spain             39.0\n",
+       "United Kingdom    39.0\n",
+       "United States     39.0\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_group['Age'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "be2bf059",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>median</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Australia</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.409836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Brazil</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.486339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Canada</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.460568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>France</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.606557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.349727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.661202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mexico</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.224044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spain</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.554324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.558758</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                median       mean\n",
+       "Country                          \n",
+       "Australia         12.0  12.409836\n",
+       "Brazil            13.0  12.486339\n",
+       "Canada            12.0  12.460568\n",
+       "France            13.0  12.606557\n",
+       "Germany           12.0  12.349727\n",
+       "Italy             13.0  12.661202\n",
+       "Mexico            12.0  12.224044\n",
+       "Spain             13.0  12.554324\n",
+       "United Kingdom    13.0  12.666667\n",
+       "United States     13.0  12.558758"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_group['Monthly Revenue'].agg(['median', 'mean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "5c38761f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flit = df['Country'] == 'United States'\n",
+    "df.loc[flit]['Device'].str.contains('Smartphone').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "442ca313",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Australia          55\n",
+       "Brazil             55\n",
+       "Canada             80\n",
+       "France             47\n",
+       "Germany            36\n",
+       "Italy              47\n",
+       "Mexico             46\n",
+       "Spain             102\n",
+       "United Kingdom     54\n",
+       "United States      99\n",
+       "Name: Device, dtype: int64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_group['Device'].apply(lambda x: x.str.contains('Smartphone').sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0c953740",
+   "id": "6a2913d9",
    "metadata": {},
    "outputs": [],
    "source": []
