--- a/Pandas/data_3/panda_demo.ipynb
+++ b/Pandas/data_3/panda_demo.ipynb
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f3a3e9e0",
+   "id": "bc75d764",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "dd75a274",
+   "id": "f46ca339",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "22124c23",
+   "id": "1bb1f06b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "140998cb",
+   "id": "79258efb",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "991ccacd",
+   "id": "41cbdad3",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "2803559e",
+   "id": "b6e5da09",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f0b44d6c",
+   "id": "86c6393b",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "8acf6993",
+   "id": "9c619628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "dd3a45e1",
+   "id": "c7058b14",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a1320c73",
+   "id": "de8bf42a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "77d50e9f",
+   "id": "e9b62733",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "c89aef9c",
+   "id": "53e6802e",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "18037bd1",
+   "id": "5ef135f6",
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "ba3d8d40",
+   "id": "1fd1d4c6",
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "9fb1f60e",
+   "id": "c4b7e7d7",
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b53ff52b",
+   "id": "2b010e65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "aa2f0856",
+   "id": "a09846cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "b93c8a1b",
+   "id": "21230202",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "39001e82",
+   "id": "7de96c53",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "d467e370",
+   "id": "dfec3886",
    "metadata": {},
    "outputs": [
     {
@@ -1778,35 +1778,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "a7f3bd9e",
+   "execution_count": 117,
+   "id": "65e77a87",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "Cannot save file into a non-existent directory: 'data_3'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17156\\1691343977.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_2019\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_3/modified.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[0;32m   3549\u001b[0m         )\n\u001b[0;32m   3550\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3551\u001b[1;33m         return DataFrameRenderer(formatter).to_csv(\n\u001b[0m\u001b[0;32m   3552\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3553\u001b[0m             \u001b[0mline_terminator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mline_terminator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\format.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, encoding, sep, columns, index_label, mode, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, errors, storage_options)\u001b[0m\n\u001b[0;32m   1178\u001b[0m             \u001b[0mformatter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1179\u001b[0m         )\n\u001b[1;32m-> 1180\u001b[1;33m         \u001b[0mcsv_formatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1181\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1182\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcreated_buffer\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    239\u001b[0m         \"\"\"\n\u001b[0;32m    240\u001b[0m         \u001b[1;31m# apply compression and byte/text conversion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 241\u001b[1;33m         with get_handle(\n\u001b[0m\u001b[0;32m    242\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    243\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    692\u001b[0m     \u001b[1;31m# Only for write methods\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    693\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;34m\"r\"\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmode\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mis_path\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 694\u001b[1;33m         \u001b[0mcheck_parent_directory\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    695\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    696\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcompression\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mcheck_parent_directory\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    566\u001b[0m     \u001b[0mparent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparent\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    567\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mparent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_dir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 568\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mOSError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mrf\"Cannot save file into a non-existent directory: '{parent}'\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    569\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    570\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: Cannot save file into a non-existent directory: 'data_3'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_2019.to_csv('data_3/modified.csv')"
+    "df_2019.to_csv('modified.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e256c5",
+   "id": "419f8a75",
    "metadata": {},
    "outputs": [],
    "source": []
